# Calculator

./: .gitignore  CMakeLists.txt  Main.qml  Makefile  MyGridButton.qml  README.md  backend.cpp  backend.h  conanfile.py  main.cpp
resources/qml/: CalculatorPage.qml  HistoryPage.qml  Main.qml  MyGridButton.qml  main.qml  qml.qrc
source/: CMakeLists.txt  main.cpp
source/app/: CMakeLists.txt
source/backend/: CMakeLists.txt  backend.cpp  backend.h
source/evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h
source/lexer/: CMakeLists.txt  lexer.cpp  lexer.h
source/parser/: CMakeLists.txt  parser.cpp  parser.h
source/symbols/: CMakeLists.txt  symbols.h
tests/: CMakeLists.txt  evaluator_pass.cpp  lexer_pass.cpp  lexer_tests.cpp  parser_pass.cpp
